--- a/docs/guides/Dag-Tutorial.mdx
+++ b/docs/guides/Dag-Tutorial.mdx
@@ -44,7 +44,7 @@ dag_drawer(dag)
 
 ## Basic DAG operations
 
-This section demonstrates common operations with DAGs, including accessing nodes, adding operations, and substituting subcircuits. These operations form the foundation for building custom transpiler passes.
+The code examples below demonstrate common operations with DAGs, including accessing nodes, adding operations, and substituting subcircuits. These operations form the foundation for building transpiler passes.
 ## Get all operation nodes in the DAG
 The ```op_nodes()``` method returns an iterable list of ```DAGOpNode``` objects in the circuit:
 ```python
