--- a/docs/guides/DAG-representation.mdx
+++ b/docs/guides/DAG-representation.mdx
@@ -190,4 +190,5 @@ out_circ.draw(output='mpl')
 
 
 ## DAGOpNode Attributes in Qiskit
-For a complete reference of available attributes and methods for ```DAGOpNode```, please see the Qiskit API documentation.
+For a complete reference of available attributes and methods for ```DAGOpNode```, please see the [Qiskit API documentation](https://docs.quantum.ibm.com/api/qiskit/dagcircuit).
+
