--- a/docs/guides/DAG-representation.mdx
+++ b/docs/guides/DAG-representation.mdx
@@ -1,3 +1,5 @@
+<!-- cspell:ignore subdag -->
+
 ---
 title: Work with DAGs in transpiler passes
 description: How to use Directed Acyclic Graphs (DAGs) to analyze and transform quantum circuits in Qiskit transpiler passes
