--- a/docs/guides/DAG-representation.mdx
+++ b/docs/guides/DAG-representation.mdx
@@ -1,10 +1,9 @@
-<!-- cspell:ignore subdag -->
-
 ---
 title: Work with DAGs in transpiler passes
 description: How to use Directed Acyclic Graphs (DAGs) to analyze and transform quantum circuits in Qiskit transpiler passes
 ---
 
+<!-- cspell:ignore subdag DAGOpNode qargs cargs dag_drawer -->
 # Work with DAGs in transpiler passes
 
 In Qiskit, within the transpilation stages, circuits are represented using a DAG. In general, a DAG is composed of vertices (also known as "nodes") and directed edges that connect pairs of vertices in a particular orientation. This representation is stored using ```qiskit.dagcircuit.DAGCircuit``` objects that are composed of invididual ```DagNode``` objects. The advantage of this representation over a pure list of gates (that is, a netlist) is that the flow of information between operations is explicit, making it easier to make transformation decisions.
