Print first ten results rather than counts object

--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -423,7 +423,7 @@
     "# Get results for the first (and only) PUB\n",
     "pub_result = result[0]\n",
     "print(\n",
-    "    f\"Counts for the 'meas' output register: {pub_result.data.meas.get_counts()}\"\n",
+    "    f\"First ten results for the 'meas' output register: {pub_result.data.meas.get_memory()[:10]}\"\n",
     ")"
    ]
   },
