--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -243,7 +243,7 @@
     "\n",
     "The `backend.properties().qubit_property(0)` returns the following attributes of qubit 0. It contains a dictionary of various properties of the qubit, each paired with its value and the timestamp of the last calibration.\n",
     "\n",
-    "- `T1 (Relaxation Time)`: The T1 time represents the average duration a qubit remains in its excited state (|1⟩) before decaying to its ground state (|0⟩) due to energy relaxation. This parameter is crucial for understanding the qubit's energy relaxation behavior and is typically measured in microseconds (µs).\n",
+    "- `T1 (Relaxation Time)`: The T1 time represents the average duration a qubit remains in its excited state (|1⟩) before decaying to its ground state (|0⟩) due to energy relaxation. This parameter is used to characterize the qubit's energy relaxation behavior, and is expressed in units of seconds (s).\n",
     "\n",
     "- `T2 (Dephasing Time)`: The T2 time denotes the timescale over which a qubit maintains phase coherence between the |0⟩ and |1⟩ states. It accounts for both energy relaxation and pure dephasing processes, providing insight into the qubit's coherence properties. T2 is also measured in microseconds (µs).\n",
     "\n",
