--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -245,7 +245,7 @@
     "\n",
     "- `T1 (Relaxation Time)`: The T1 time represents the average duration a qubit remains in its excited state (|1⟩) before decaying to its ground state (|0⟩) due to energy relaxation. This parameter is used to characterize the qubit's energy relaxation behavior, and is expressed in units of seconds (s).\n",
     "\n",
-    "- `T2 (Dephasing Time)`: The T2 time denotes the timescale over which a qubit maintains phase coherence between the |0⟩ and |1⟩ states. It accounts for both energy relaxation and pure dephasing processes, providing insight into the qubit's coherence properties. T2 is also measured in microseconds (µs).\n",
+    "- `T2 (Dephasing Time)`: The T2 time denotes the timescale over which a qubit maintains phase coherence of a superposition between the |0⟩ and |1⟩ states. It accounts for both energy relaxation and pure dephasing processes, providing insight into the qubit's coherence properties. \n",
     "\n",
     "- `frequency`: This parameter specifies the resonant frequency of the qubit, indicating the energy difference between the |0⟩ and |1⟩ states. It is typically expressed in gigahertz (GHz) and is essential for calibrating control pulses and understanding qubit behavior.\n",
     "\n",
