--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -249,7 +249,7 @@
     "\n",
     "- `frequency`: This parameter specifies the resonant frequency of the qubit, indicating the energy difference between the |0⟩ and |1⟩ states, expressed in hertz (Hz). \n",
     "\n",
-    "- `anharmonicity`: Anharmonicity in superconducting qubits refers to the difference in energy between the first and second excited states of the qubit. It is typically expressed in frequency units, such as gigahertz (GHz) or hertz (Hz).\n",
+    "- `anharmonicity`: Anharmonicity is the difference in energy between the first and second excited states of the qubit, also expressed in hertz (Hz). \n",
     "\n",
     "- `readout_error`: The readout error quantifies the average probability of incorrectly measuring a qubit's state. It is commonly calculated as the mean of prob_meas0_prep1 and prob_meas1_prep0, providing a single metric for measurement fidelity.\n",
     "\n",
