Updating the docs with the new OS LLMs released and the new default model granite-3.3-8b-qiskit

--- a/docs/guides/qiskit-code-assistant-openai-api.mdx
+++ b/docs/guides/qiskit-code-assistant-openai-api.mdx
@@ -36,7 +36,7 @@ To retrieve/view the model disclaimer, make a **GET** request to the disclaimer 
 
 ```
 curl -X 'GET' \
-  'https://qiskit-code-assistant.quantum.ibm.com/v1/model/granite-8b-qiskit/disclaimer' \
+  'https://qiskit-code-assistant.quantum.ibm.com/v1/model/granite-3.3-8b-qiskit/disclaimer' \
   -H 'accept: application/json' \
   -H 'Authorization: Bearer <IBM Quantum API key>'
 ```
@@ -45,7 +45,7 @@ If you agree with the model disclaimer, to accept it, **POST** to the disclaimer
 
 ```
 curl -X 'POST' \
-  'https://qiskit-code-assistant.quantum.ibm.com/v1/model/granite-8b-qiskit/disclaimer' \
+  'https://qiskit-code-assistant.quantum.ibm.com/v1/model/granite-3.3-8b-qiskit/disclaimer' \
   -H 'accept: application/json' \
   -H 'Authorization: Bearer <IBM Quantum API key>' \
   -H 'Content-Type: application/json' \
@@ -67,12 +67,15 @@ The OpenAI Python library provides convenient access to the OpenAI REST API (suc
 from openai import OpenAI
 
 # Initialize the client with your API key
-client = OpenAI(api_key=auth_token_iqp, base_url=assistant_url)
+client = OpenAI(
+    api_key="<IBM Quantum Classic API key>",
+    base_url="https://qiskit-code-assistant.quantum.ibm.com/v1",
+)
 
 # Make a request to the completions API
 try:
     response = client.completions.create(
-        model=model,  # or another compatible model
+        model="granite-3.3-8b-qiskit",
         prompt="#Transpile a random circuit using the Qiskit Transpiler Service",
     )
 
@@ -81,6 +84,7 @@ try:
 
 except Exception as e:
     print(f"An error occurred: {e}")
+
 ```
 
 ### Use LiteLLM
@@ -91,12 +95,15 @@ LiteLLM is a convenient Python library to access multiple LLM APIs using the Ope
 from litellm import completion
 
 response = completion(
-    model=f"text-completion-openai/{model}",
-    base_url= assistant_url,
+    model=f"text-completion-openai/granite-3.3-8b-qiskit",
+    base_url="https://qiskit-code-assistant.quantum.ibm.com/v1",
     messages=[
-        {"role": "user", "content": "#Transpile a random circuit using the Qiskit Transpiler Service"}
+        {
+            "role": "user",
+            "content": "#Transpile a random circuit using the Qiskit Transpiler Service",
+        }
     ],
-    api_key=<IBM Quantum API key>
+    api_key="<IBM Quantum Classic API key>",
 )
 
 completion_response = response.json()
