--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -99,7 +99,7 @@ Each qubit on a QPU has specific properties that characterize its performance an
 
 - **T1**: The longitudinal relaxation time, representing how long it takes (in seconds) for a qubit to decay from the |1⟩ state to the |0⟩ state.
 - **T2**: The transverse relaxation time, representing how long (in seconds) quantum phase information is preserved.
-- **Frequency**: The operating frequency of the qubit (in Hz).
+- **Frequency**: The resonance frequency of the qubit (in Hz).
 - **Readout error**: The average probability of a measurement error for the qubit, calculated as:  
   `(prob_meas1_prep0 + prob_meas0_prep1)/2`
 - **prob_meas0_prep1**: The probability of measuring `0` when the qubit was intended to be prepared in the |1⟩ state (P(0|1)).
