--- a/docs/guides/qiskit-code-assistant.mdx
+++ b/docs/guides/qiskit-code-assistant.mdx
@@ -21,7 +21,7 @@ Qiskit Code Assistant aims to make quantum computing more accessible to new Qisk
 
 The following features are included in the [Visual Studio Code](https://code.visualstudio.com/) (VS Code) and [JupyterLab.](https://jupyterlab.readthedocs.io/en/latest/) extensions:
 
-* Accelerates Qiskit code generation by leveraging generative AI based on the our Granite models specialized on generating Qiskit code.
+* Accelerates Qiskit code generation by leveraging generative AI based on Granite models specialized in generating Qiskit code.
 * Allows abstract and specific prompts to generate recommendations.
 * Presents suggestions that you can review, accept, or reject.
 * Supports Python code and Jupyter notebook files.
@@ -35,11 +35,11 @@ For instructions to integrate Qiskit Code Assistant directly into your developme
 
 To provide code suggestions, Qiskit Code Assistant uses a Large Language Model (LLM). In this case, Qiskit Code Assistant currently relies on the model `granite-3.3-8b-qiskit`, built on the IBM [granite-3.3-8b models.](https://huggingface.co/collections/ibm-granite/granite-33-language-models-67f65d0cca24bcbd1d3a08e3) The `granite-3.3-8b-qiskit` model improves the `granite-3.3-8b` models' code generation capabilities for Qiskit through extended pretraining and fine-tuning it on high-quality Qiskit data, as well as Python commits and chat. For more information about the IBM Granite models family, refer to [Granite Code Models: A Family of Open Foundation Models for Code Intelligence.](https://arxiv.org/abs/2405.04324) For more details about the `granite-.*-qiskit` models, see [Qiskit Code Assistant: Training LLMs for generating Quantum Computing Code.](https://arxiv.org/abs/2405.19495)
 
-Our LLMs specialized for Qiskit are available also as Open Source models. Check all the models available in <https://huggingface.co/Qiskit>
+Our LLMs specialized for Qiskit are available also as open-source models. Check all the models available at <https://huggingface.co/Qiskit>.
 
 ## The Qiskit HumanEval benchmark
 
-To test our `granite-.*-qiskit` models, we are creating, in collaboration with Qiskit Advocates and experts, a new execution-based benchmark called Qiskit HumanEval (QHE). This benchmark is similar to [HumanEval](https://arxiv.org/abs/2107.03374), including multiple challenging code problems to solve, all based on the official Qiskit libraries.
+To test the `granite-.*-qiskit` models, we are creating, in collaboration with Qiskit Advocates and experts, a new execution-based benchmark called Qiskit HumanEval (QHE). This benchmark is similar to [HumanEval](https://arxiv.org/abs/2107.03374), including multiple challenging code problems to solve, all based on the official Qiskit libraries.
 
 The benchmark is composed of approximately 150 tests, each one made from a function definition, followed by a docstring that details the task the model is required to solve. Each example also includes a reference canonical solution, as well as unit tests, to evaluate the correctness of the generated solutions. There are three levels of difficulty for tests: basic, intermediate, and difficult.
 
