Final pass through FQA and GFQI.

--- a/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/analysis.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/analysis.ipynb
@@ -8,7 +8,7 @@
     "# Analysis\n",
     "\n",
     "Now we'll analyze Grover's algorithm to understand how it works.\n",
-    "We'll start with what could be described as a *symbolic* analysis, where we calculate how the Grover operation $G$ acts on certain states, and then we'll then tie this symbolic analysis to a *geometric* picture that's helpful for visualizing how the algorithm works.\n",
+    "We'll start with what could be described as a *symbolic* analysis, where we calculate how the Grover operation $G$ acts on certain states, and then we'll tie this symbolic analysis to a *geometric* picture that's helpful for visualizing how the algorithm works.\n",
     "\n",
     "## Solutions and non-solutions\n",
     "\n",
@@ -108,7 +108,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Second we have the operation $H^{\\otimes n} Z_{\\mathrm{OR}} H^{\\otimes n}.$\n",
+    "Second, we have the operation $H^{\\otimes n} Z_{\\mathrm{OR}} H^{\\otimes n}.$\n",
     "The operation $Z_{\\mathrm{OR}}$ is defined as\n",
     "\n",
     "$$\n",
@@ -141,8 +141,8 @@
     "$$\n",
     "\\begin{aligned}\n",
     "  G \\vert A_0 \\rangle\n",
-    "  & = \\bigr( 2 \\vert u\\rangle \\langle u \\vert - \\mathbb{I}\\bigr) Z_f \\vert A_0\\rangle \\\\\n",
-    "  & = \\bigr( 2 \\vert u\\rangle \\langle u \\vert - \\mathbb{I}\\bigr) \\vert A_0\\rangle \\\\\n",
+    "  & = \\bigl( 2 \\vert u\\rangle \\langle u \\vert - \\mathbb{I}\\bigr) Z_f \\vert A_0\\rangle \\\\\n",
+    "  & = \\bigl( 2 \\vert u\\rangle \\langle u \\vert - \\mathbb{I}\\bigr) \\vert A_0\\rangle \\\\\n",
     "  & = 2 \\sqrt{\\frac{\\vert A_0\\vert}{N}} \\vert u\\rangle -\\vert A_0 \\rangle\\\\\n",
     "  & = 2 \\sqrt{\\frac{\\vert A_0\\vert}{N}} \\biggl(\n",
     "  \\sqrt{\\frac{\\vert A_0\\vert}{N}} \\vert A_0\\rangle + \\sqrt{\\frac{\\vert A_1\\vert}{N}} \\vert A_1\\rangle\\biggr)\n",
@@ -159,8 +159,8 @@
     "$$\n",
     "\\begin{aligned}\n",
     "  G \\vert A_1 \\rangle\n",
-    "  & = \\bigr( 2 \\vert u\\rangle \\langle u \\vert - \\mathbb{I} \\bigr) Z_f \\vert A_1\\rangle \\\\\n",
-    "  & = - \\bigr( 2 \\vert u\\rangle \\langle u \\vert - \\mathbb{I} \\bigr) \\vert A_1\\rangle \\\\\n",
+    "  & = \\bigl( 2 \\vert u\\rangle \\langle u \\vert - \\mathbb{I} \\bigr) Z_f \\vert A_1\\rangle \\\\\n",
+    "  & = - \\bigl( 2 \\vert u\\rangle \\langle u \\vert - \\mathbb{I} \\bigr) \\vert A_1\\rangle \\\\\n",
     "  & = - 2 \\sqrt{\\frac{\\vert A_1\\vert}{N}} \\vert u\\rangle + \\vert A_1 \\rangle \\\\\n",
     "  & = - 2 \\sqrt{\\frac{\\vert A_1\\vert}{N}} \\biggl(\\sqrt{\\frac{\\vert A_0\\vert}{N}} \\vert A_0\\rangle\n",
     "      + \\sqrt{\\frac{\\vert A_1\\vert}{N}} \\vert A_1\\rangle\\biggr) + \\vert A_1 \\rangle \\\\\n",
