--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/phase-estimation-problem.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/phase-estimation-problem.ipynb
@@ -124,13 +124,13 @@
     "M \\vert \\psi_j \\rangle = \\lambda_j \\vert \\psi_j \\rangle\n",
     "$$\n",
     "\n",
-    "must true for every $j = 1,\\ldots,N.$\n",
+    "must be true for every $j = 1,\\ldots,N.$\n",
     "This is a consequence of the fact that $\\bigl\\{ \\vert\\psi_1\\rangle,\\ldots,\\vert\\psi_N\\rangle \\bigr\\}$ is orthonormal:\n",
     "\n",
     "$$\n",
     "M \\vert \\psi_j \\rangle\n",
     "= \\left(\\sum_{k = 1}^N \\lambda_k \\vert \\psi_k\\rangle\\langle \\psi_k\\vert\\right)\\vert \\psi_j\\rangle\n",
-    "= \\sum_{k = 1}^n \\lambda_k \\vert \\psi_k\\rangle\\langle \\psi_k\\vert\\psi_j \\rangle\n",
+    "= \\sum_{k = 1}^N \\lambda_k \\vert \\psi_k\\rangle\\langle \\psi_k\\vert\\psi_j \\rangle\n",
     "= \\lambda_j \\vert\\psi_j \\rangle\n",
     "$$\n",
     "\n",
@@ -153,7 +153,7 @@
     "  \\vert\\psi_2\\rangle = \\vert 1\\rangle.\n",
     "  $$\n",
     "\n",
-    "  Notice that the theorem does not say that the complex numbers $\\lambda_1,\\ldots,\\lambda_n$ are\n",
+    "  Notice that the theorem does not say that the complex numbers $\\lambda_1,\\ldots,\\lambda_N$ are\n",
     "  distinct — we can have the same complex number repeated, which is necessary for this example.\n",
     "  These choices work because\n",
     "  $$\n",
@@ -273,7 +273,7 @@
     "The goal of the problem is to compute or approximate this real number $\\theta.$\n",
     "\n",
     "> **Phase estimation problem**\\\n",
-    "> Input: A unitary quantum circuit for an $n$-qubit operation $U$ along with an $n$ qubit quantum state $\\vert\\psi\\rangle$ \\\n",
+    "> Input: A unitary quantum circuit for an $n$-qubit operation $U$ along with an $n$-qubit quantum state $\\vert\\psi\\rangle$ \\\n",
     "> Promise: $\\vert\\psi\\rangle$ is an eigenvector of $U$ \\\n",
     "> Output: an approximation to the number $\\theta\\in[0,1)$ satisfying $U\\vert\\psi\\rangle = e^{2\\pi i \\theta}\\vert\\psi\\rangle$\n",
     "\n",
