--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/phase-estimation-procedure.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/phase-estimation-procedure.ipynb
@@ -69,7 +69,7 @@
     "$$\n",
     "\n",
     "Here we observe the phase kickback phenomenon.\n",
-    "It is slightly different this time than it was for Deutsch's algorithm and the Deutsch-Jozsa algorithm because we're not working with a query gate — but the idea is the similar.\n",
+    "It is slightly different this time than it was for Deutsch's algorithm and the Deutsch-Jozsa algorithm because we're not working with a query gate — but the idea is similar.\n",
     "\n",
     "Finally, the second Hadamard gate is performed. After just a bit of simplification, we obtain this expression for this state.\n",
     "\n",
@@ -446,7 +446,7 @@
     "\n",
     "### Controlled-phase gates\n",
     "\n",
-    "To implement the quantum Fourier transform with a quantum circuit, we'll to make use of *controlled-phase* gates.\n",
+    "To implement the quantum Fourier transform with a quantum circuit, we'll need to make use of *controlled-phase* gates.\n",
     "Recall that a *phase operation* is a single-qubit unitary operation of the form\n",
     "\n",
     "$$\n",
