--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/factoring-and-gcd.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/factoring-and-gcd.ipynb
@@ -21,7 +21,7 @@
     "> Input:  an integer $N\\geq 2$\\\n",
     "> Output: the prime factorization of $N$\n",
     "\n",
-    "By the *prime factorization* of $N,$ we mean a list of the prime factors of $N$ and the powers to which they must be raised to obtain $N$ by multiplication.\n",
+    "By the *prime factorization* of $N$ we mean a list of the prime factors of $N$ and the powers to which they must be raised to obtain $N$ by multiplication.\n",
     "For example, the prime factors of $12$ are $2$ and $3,$ and to obtain $12$ we must take the product of $2$ to the power $2$ and $3$ to the power $1.$\n",
     "\n",
     "$$\n",
@@ -215,7 +215,7 @@
     "\n",
     "Could there be a fast algorithm for integer factorization that we just haven't discovered yet, allowing large numbers like RSA1024 to be factored in the blink of an eye?\n",
     "The answer is yes.\n",
-    "Although we might expect that an efficient algorithm for factoring as simple and elegant as Euclid's algorithm for computing GCDs would have been discovered by now, there is nothing that rules out the existence of a very fast classical algorithm for integer factoring, beyond the fact that we've failed to find one thus far.\n",
+    "Although we might expect that an efficient algorithm for factoring as simple and elegant as Euclid's algorithm for computing GCDs would have been discovered by now, there is nothing that rules out the existence of a very fast classical algorithm for integer factorization, beyond the fact that we've failed to find one thus far.\n",
     "One could be discovered tomorrow — but don't hold your breath.\n",
     "Generations of mathematicians and computer scientists have searched, and factoring numbers like RSA1024 remains beyond our reach."
    ]
