--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-algorithm.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "Deutsch's algorithm solves Deutsch's problem using a single query, therefore providing a quantifiable advantage of quantum over classical computations.\n",
     "This may be a modest advantage — one query as opposed to two — but we have to start somewhere.\n",
-    "Scientific advancements sometimes have seemingly humble origins.\n",
+    "Scientific advances sometimes have seemingly humble origins.\n",
     "\n",
     "Here is a quantum circuit that describes Deutsch's algorithm:\n",
     "\n",
@@ -154,7 +154,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Notice that in this expression, we have $f(0) \\oplus f(1)$ in the exponent of $-1$ as opposed to $f(1) - f(0),$ which is what we might expect from a purely algebraic viewpoint, but we obtain the same value either way.\n",
+    "Notice that in this expression, we have $f(0) \\oplus f(1)$ in the exponent of $-1$ as opposed to $f(1) - f(0),$ which is what we might expect from a purely algebraic viewpoint, but we obtain the same result either way.\n",
     "This is because the value $(-1)^k$ for any integer $k$ depends only on whether $k$ is even or odd.\n",
     "\n",
     "Applying the final Hadamard gate to the top qubit leaves us with the state\n",
