--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/introduction.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "# Introduction\n",
     "\n",
-    "In this lesson we'll discuss the phase estimation problem and how to solve it with a quantum computer.\n",
+    "In this lesson, we'll discuss the phase estimation problem and how to solve it with a quantum computer.\n",
     "We'll then use this solution to obtain\n",
     "<DefinitionTooltip definition=\"In addition to his integer factorization algorithm, Peter Shor also discovered an efficient quantum algorithm for the different but related problem of computing discrete logarithms. The two algorithms appeared in the same paper, first published as a conference paper in 1994 and then as a journal paper in 1997.\">Shor's algorithm</DefinitionTooltip> — an efficient quantum algorithm for the integer factorization problem.\n",
     "Along the way, we'll encounter the quantum Fourier transform, and we'll see how it can be implemented efficiently by a quantum circuit.\n",
