--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
@@ -14,11 +14,11 @@
     "\n",
     "The query model of computation is like a petri dish for quantum algorithmic ideas.\n",
     "It's rigid and unnatural, in the sense that it doesn't accurately represent the sorts of computational problems we generally care about in practice, but it has nevertheless proved to be incredibly useful as a tool for developing quantum algorithmic techniques.\n",
-    "This including the ones that power the most well-known quantum algorithms, such as Shor's algorithm for integer factorization.\n",
+    "This includes the ones that power the most well-known quantum algorithms, such as Shor's algorithm for integer factorization.\n",
     "The query model also happens to be a very useful framework for *explaining* quantum algorithmic techniques.\n",
     "\n",
     "After introducing the query model itself, we'll discuss the very first quantum algorithm that was discovered, which is *Deutsch's algorithm,* along with an extension of Deutsch's algorithm known as the *Deutsch-Jozsa algorithm*.\n",
-    "These algorithms demonstrate quantifiable advantages of quantum over classical computers within the context of the query mode.\n",
+    "These algorithms demonstrate quantifiable advantages of quantum over classical computers within the context of the query model.\n",
     "We'll then discuss a quantum algorithm known as *Simon's algorithm,* which offers a more robust and satisfying advantage of quantum over classical computations, for reasons that will be explained when we get to it.\n",
     "\n",
     "## Lesson video\n",
