--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -29,7 +29,7 @@ There are a few major changes you will see in the updated IBM Quantum Platform:
 * Open Plan users cannot run session jobs.  Previously, if you tried to run a job in a session, it was run in job mode.  Now, if you try to run a job in a session, the job fails.  Instead, Open Plan users should explicitly write their code to run in job or batch mode. See [execution modes](/docs/guides/execution-modes) to learn how to set the execution mode.
 * Quantum computers powered by the state-of-the-art IBM Quantum Heron processor are available through the Open Plan.
 * For IBM Quantum Platform Classic users, the hierarchical authorization structure has changed.  That is, there are no hubs, groups, or projects in the new platform. All user management is done through IBM Cloud [identity and access management (IAM)](https://cloud.ibm.com/docs/account?topic=account-iamoverview). By default, access groups are created for you when you create an instance through the IBM Quantum Platform user interface.
-* When activating the service, the IBM Cloud Instance CRN or name can optionally be passed in (required in `qiskit-ibm-runtime < 0.40.0`), and the channel must be set to `ibm_cloud` or `ibm_quantum_platform`. Both of these channels point to the new IBM Quantum Platform API but the `ibm_cloud` channel will be deprecated and removed in a future release. The instance is specified by using its cloud resource name (CRN).
+* When activating the service, the IBM Cloud Instance CRN or name can optionally be passed in (the CRN is required in `qiskit-ibm-runtime versions earlier than v0.40.0`), and the channel must be set to `ibm_cloud` or `ibm_quantum_platform`. Both of these channels point to the new IBM Quantum Platform API but the `ibm_cloud` channel will be deprecated and removed in a future release. The instance is specified by using its cloud resource name (CRN).
 
 ### Instances
 
