--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -143,7 +143,7 @@ Follow these steps to start using the new version of IBM Quantum Platform.
 
     # After using the following code, go to the IBM Cloud API keys page (https://cloud.ibm.com/iam/apikeys)
     # and disable your API key (click Enabled slider in the API key field)
-    service = QiskitRuntimeService(channel="ibm_quantum_platform", token="<MY_IBM_QUANTUM_TOKEN>", instance="<MY_INSTANCE_CRN>")
+    service = QiskitRuntimeService(channel="ibm_quantum_platform", token="<MY_IBM_QUANTUM_TOKEN>", instance="<MY_INSTANCE_CRN or name>")
     ```
 
     <Admonition type="caution">
