--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -87,7 +87,7 @@ The [Ollama/Hugging Face Hub integration](https://huggingface.co/docs/hub/ollama
 
 1. Make sure the Ollama application is running.
 
-1. Go the desired model page, and copy the URL. For example, <https://huggingface.co/Qiskit/granite-3.3-8b-qiskit>.
+1. Go the desired model page, and copy the URL. For example, https://huggingface.co/Qiskit/granite-3.3-8b-qiskit.
 
 1. From your terminal, run the command:
 
@@ -97,7 +97,7 @@ The [Ollama/Hugging Face Hub integration](https://huggingface.co/docs/hub/ollama
 
 #### Set up Ollama with a manually downloaded Qiskit Code Assistant GGUF model
 
-If you have manually downloaded a GGUF model such as <https://huggingface.co/Qiskit/granite-8b-qiskit-GGUF> and you want to experiment with different templates and parameters, you can follow these steps to load it into your local Ollama application.
+If you have manually downloaded a GGUF model such as https://huggingface.co/Qiskit/granite-8b-qiskit-GGUF and you want to experiment with different templates and parameters, you can follow these steps to load it into your local Ollama application.
 
 1. Create a `Modelfile` entering the following content and be sure to update `<PATH-TO-GGUF-FILE>` to the actual path of your downloaded model.
 
