--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -18,7 +18,7 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 Learn how to install, use, configure and uninstall the official Qiskit Code Assistant extension in Visual Studio Code (VS Code).
 
 <Admonition type="note" title="Notes">
-    - This is an experimental feature available only to IBM Quantum&reg; Premium Plan users with[IBM Quantum Platform Classic](https://quantum.ibm.com/) accounts.
+    - This is an experimental feature available only to IBM Quantum&reg; Premium Plan users with [IBM Quantum Platform Classic](https://quantum.ibm.com/) accounts.
     - Qiskit Code Assistant is in preview release status and is subject to change.
     - If you have feedback or want to contact the developer team, use the [Qiskit Slack Workspace channel](https://qiskit.enterprise.slack.com/archives/C07LYA6PL83) or the related public GitHub repositories.
 </Admonition>
@@ -64,9 +64,9 @@ After installing the extension, it tries to authenticate you. By default, the pa
 <CloudContent>
 After installing the extension, it tries to authenticate you. By default, the package tries to authenticate to IBM Quantum services with the defined API key, and uses your key from the `QISKIT_IBM_TOKEN` environment variable or from the file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`). If you need help configuring your account, follow the instructions in [Set up to use IBM Cloud.](/docs/guides/cloud-setup#cloud)
 </CloudContent>
-By default, the extension uses the `granite-8b-qiskit` model, which is listed in the Model Picker in the bottom status bar.
+By default, the extension uses the `granite-3.3-8b-qiskit` model, which is listed in the Model Picker in the bottom status bar.
 
-The first time you use the `granite-8b-qiskit` model, a modal opens listing some major restrictions that you should be aware of when using the model. Click **Accept** to enable the model for code generation.
+The first time you use the `granite-3.3-8b-qiskit` model, a modal opens listing some major restrictions that you should be aware of when using the model. Click **Accept** to enable the model for code generation.
 
 ### Generate code
 
