Switch testing to `ibm_cloud`

--- a/docs/guides/primitives-rest-api.ipynb
+++ b/docs/guides/primitives-rest-api.ipynb
@@ -847,7 +847,7 @@
     "from qiskit.circuit import Parameter\n",
     "from qiskit import transpile\n",
     "\n",
-    "service = QiskitRuntimeService(channel='ibm_quantum')\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.backend(\"<your selected backend>\")\n",
     "\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
