Small fix to Shor's algorithm notebook.

--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/shor-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/shor-algorithm.ipynb
@@ -16,7 +16,7 @@
     "We'll begin by discussing an intermediate problem known as the *order-finding problem* and see how phase estimation provides a solution to this problem.\n",
     "We'll then see how an efficient solution to the order-finding problem gives us an efficient solution to the integer factorization problem.\n",
     "(When a solution to one problem provides a solution to another problem like this, we say that the second problem *reduces* to the first — so in this case we're reducing integer factorization to order finding.)\n",
-    "This second part of Shor's algorithm doesn't make use of quantum computing at all, it's completely classical.\n",
+    "This second part of Shor's algorithm doesn't make use of quantum computing at all; it's completely classical.\n",
     "Quantum computing is only needed to solve order finding.\n",
     "\n",
     "## The order-finding problem\n",
@@ -465,7 +465,7 @@
     "\n",
     "then we'll have enough precision to correctly determine $r$ when we take the reciprocal.\n",
     "Taking $m = 2\\operatorname{lg}(N)+1$ ensures that we have a high chance to obtain an estimation with this precision using the method described previously.\n",
-    "(Taking $m = 2\\operatorname{lg}(N)$ is good enough if we're comfortable with a lower-bound of 40% on the probability of success.)\n",
+    "(Taking $m = 2\\operatorname{lg}(N)$ is good enough if we're comfortable with a lower bound of 40% on the probability of success.)\n",
     "\n",
     "### General solution\n",
     "\n",
@@ -560,7 +560,7 @@
     "\n",
     "As is typical, all of these bounds can be improved using asymptotically fast algorithms; these bounds assume we're using standard algorithms for basic arithmetic operations.\n",
     "\n",
-    "## Factoring by order-finding\n",
+    "## Factoring by order finding\n",
     "\n",
     "The very last thing we need to discuss is how solving the order-finding problem helps us to factor.\n",
     "This part is completely classical — it has nothing specifically to do with quantum computing.\n",
@@ -577,15 +577,15 @@
     "approximating the roots $N^{1/2},$ $N^{1/3},$ $N^{1/4},$ etc., and checking nearby integers as suspects for $s.$\n",
     "We don't need to go further than $\\log(N)$ steps into this sequence, because at that point the root drops below $2$ and won't reveal additional candidates.\n",
     "\n",
-    "It's good that we can do both of these things because order-finding won't help us to factor even numbers or for *prime* powers, where the number $s$ happens to be prime.\n",
-    "If $N$ is odd and not a prime power, however, order-finding allows us to split $N.$\n",
+    "It's good that we can do both of these things because order finding won't help us to factor even numbers or for *prime* powers, where the number $s$ happens to be prime.\n",
+    "If $N$ is odd and not a prime power, however, order finding allows us to split $N.$\n",
     "\n",
     "> **Probabilistic algorithm to split an odd, composite integer N that is not a prime power**\n",
     ">\n",
     "> 1. Randomly choose $a\\in\\{2,\\ldots,N-1\\}.$\n",
     "> 2. Compute $d=\\gcd(a,N).$\n",
     "> 3. If $d > 1$ then output $b = d$ and $c = N/d$ and stop. Otherwise continue to the next step knowing that $a\\in\\mathbb{Z}_N^{\\ast}.$\n",
-    "> 4. Let $r$ be the order of $a$ modulo $N.$ (Here's where we need order-finding.)\n",
+    "> 4. Let $r$ be the order of $a$ modulo $N.$ (Here's where we need order finding.)\n",
     "> 5. If $r$ is even:\n",
     ">\n",
     ">    5.1 Compute $x = a^{r/2} - 1$ modulo $N$ \\\n",
