--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -206,7 +206,7 @@ Create a fourth policy for the same instance.
 1. In the same access group, click the **Access** tab, then click **Assign access**.
 1. In the **Create policy** page that opens, define these elements:
    - **Service** - Select **Support Center**. Click **Next**.
-   - **Roles and actions** - For Platform access, select **Administrator**, Click **Next**.
+   - **Roles and actions** - For Platform access, select **Administrator**. Click **Next**.
    At the bottom, click **Add**, then click **Assign**.
 
 Finally, add users to the access group.  You can do this from the access group's **Users** page, or by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/access-groups) page.
